--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 *.userosscache
 *.sln.docstates
 socketv3/data/tmp.txt
+socketv3/out
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
