--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,10 @@
 *.user
 *.userosscache
 *.sln.docstates
-socketv3/data/tmp.txt
-socketv3/out
+out
+server
+client
+
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
