--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,10 @@
 *.user
 *.userosscache
 *.sln.docstates
-out
-server
+primary 
+storage
 client
-
+out
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
