--- a/final/Makefile
+++ b/final/Makefile
@@ -1,9 +1,9 @@
 all:
-	g++ -o primary primary.cpp -lpthread
+	g++ -o main main.cpp -lpthread
 	g++ -o storage storage.cpp -lpthread
 	g++ -o client client.cpp -lpthread
 	clear
 	
 clean:
-	rm -f primary storage client
+	rm -f main storage client
 	clear
